PROGRESS: returned initial theming colors added admin dashboard PLANS: retrieve data from backend finish dashboard for admin

--- a/assets/sass/theme.sass
+++ b/assets/sass/theme.sass
@@ -10,3 +10,18 @@ $w3-theme-d3: #007977
 $w3-theme-d4: #006866 
 $w3-theme-d5: #005755 
 
+$dh-font-serif-lbasker: 'Libre Baskerville', serif;
+
+$dh-font-cursive-lobster: 'Lobster', cursive;
+
+$dh-font-sans-oxygen: 'Oxygen', sans-serif;
+
+$dh-font-cursive-playball: 'Playball', cursive;
+
+$dh-font-sans-poppins: 'Poppins', sans-serif;
+
+$dh-font-mono-roboto-mono: 'Roboto Mono', monospace;
+
+$dh-font-cursive-satisfy: 'Satisfy', cursive;
+
+$dh-font-cursive-shadows-into-light: 'Shadows Into Light', cursive;
